# bgmner.cpp

./: .gitignore  1000.txt  CMakeLists.txt  LICENSE  README.en.md  README.md  README.zh_CN.md
include/: BGMNERInfer.h  BasicTokenizer.h  EntityParser.h  ModelArgs.h  stdafx.h  utils.h
src/: BGMNERInfer.cpp  BasicTokenizer.cpp  EntityParser.cpp  ModelArgs.cpp  main.cpp
