cmake_minimum_required(VERSION 3.13) 
project(bgmner) 
add_definitions(-std=c++17)
set(CMAKE_CXX_COMPILER_VERSION 17)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include) 
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST) 
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST}) 
# 定义一个变量，表示onnxruntime的路径
set(ONNXRUNTIME_PATH "D:\\SDK\\onnxruntime-directml")
# target_include_directories(${PROJECT_NAME} PRIVATE "D:/SDK/onnxruntime-win-x64-1.17.3/onnxruntime-win-x64-1.17.3/include")
target_include_directories(${PROJECT_NAME} PRIVATE "${ONNXRUNTIME_PATH}/include")
# target_link_directories(${PROJECT_NAME} PRIVATE "D:/SDK/onnxruntime-win-x64-1.17.3/onnxruntime-win-x64-1.17.3/lib")
target_link_directories(${PROJECT_NAME} PRIVATE "${ONNXRUNTIME_PATH}/lib")
target_link_libraries(${PROJECT_NAME} PRIVATE onnxruntime)

if(WIN32)
    # file(COPY "D:/SDK/onnxruntime-win-x64-1.17.3/onnxruntime-win-x64-1.17.3/lib/onnxruntime.dll" DESTINATION ${EXECUTABLE_OUTPUT_PATH})
    file(COPY "${ONNXRUNTIME_PATH}/lib/onnxruntime.dll" DESTINATION ${EXECUTABLE_OUTPUT_PATH})
endif()